--- a/app/assets/templates/blogs/index.jst.ejs
+++ b/app/assets/templates/blogs/index.jst.ejs
@@ -1,19 +1,22 @@
 <div class="blogs-list">
-<% Troopr.blogs.each(function(blog) { %>
-  <li class="blog-index-li">
-    <a href="javascript:void(0)" data-id="<%= blog.escape('id') %>" class="blogname-link">
-      <figure class="blog-image-fig blog-index">
-        <img src="<%= blog.get('filepicker_url') %>" width="100">
-      </figure>
-    </a>
-    <% if (!blog.get('is_current')) { %>
-      <button class="follow-btn" data-blog-id="<%= blog.id %>">
-      <% if(blog.get('is_followed')) { %>Unfollow
-      <% } else { %>Follow<% } %>
-    </button>
-    <% } %>
-    <%= blog.escape('blogname') %>
-    <%= blog.escape('description') %>
-  </li>
-<% }) %>
+  <% Troopr.blogs.each(function(blog) { %>
+    <li class="blog-index-li group">
+      <div class="left-col">
+        <a href="javascript:void(0)" data-id="<%= blog.escape('id') %>" class="blogname-link">
+          <figure class="blog-image-fig blog-index">
+            <img src="<%= blog.get('filepicker_url') %>" width="100">
+          </figure>
+        </a>
+        <% if (!blog.get('is_current')) { %>
+          <button class="follow-btn" data-blog-id="<%= blog.id %>">
+          <% if(blog.get('is_followed')) { %> Unfollow <% } else { %>Follow<% } %>
+          </button>
+        <% } %>
+      </div>
+      <div class="right-col">
+        <p class="blogname"><%= blog.escape('blogname') %></p>
+        <p class="blog-desc"><%= blog.escape('description') %></p>
+      </div>
+    </li>
+  <% }) %>
 </div>
