--- a/app/assets/templates/posts/audio.jst.ejs
+++ b/app/assets/templates/posts/audio.jst.ejs
@@ -7,8 +7,9 @@
   <div class="arrow-left"></div>
    <div class="content-box">
     <div class="post-header"></div>
+
     <iframe
-      class="audio-player"
+      class="audio-player active"
       width="500"
       height="380"
       frameborder="0"
