--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -361,6 +361,7 @@ div.dash {
 		margin-top: 20px;
 		width: 640px;
 }
+
 div.dash-post-panel {
 		height: 100px;
 		box-sizing: border-box;
@@ -370,6 +371,7 @@ div.dash-post-panel {
 		background: white;
 		float: left;
 }
+
 div.dash-post-panel a {
 		float: left;
 		box-sizing: border-box;
@@ -381,18 +383,22 @@ div.dash-post-panel a {
 		padding: 25px 5px 25px 5px;
 		border-right: 1px solid #ccc
 }
+
 div.dash-post-panel p {
 		font-weight: bold;
 		position: relative;
 		transition: top 150ms;
 		top: 0px;
 }
+
 div.dash-post-panel a:hover p {
 		top: -5px;
 }
+
 div.dash-post-panel a:last-child {
 		border-right: none
 }
+
 div.post-box {
 		width: 640px;
 		display: inline-block;
@@ -717,8 +723,12 @@ li.search-result-li:hover {
 	background: #b1b1b1;
 }
 
-iframe.hidden {
+iframe {
 	display: none;
+}
+
+iframe.active {
+	display:block;
 }
 
 input#audio-search-bar {
@@ -777,7 +787,7 @@ div.container {
 }
 
 div.container.active {
-		max-height: 700px;
+		max-height: 1200px;
 }
 
 div.new-post-form {
