--- a/app/assets/templates/forms/audio.jst.ejs
+++ b/app/assets/templates/forms/audio.jst.ejs
@@ -3,8 +3,7 @@
 
     <label for="audio-search-bar">Search for an audio file:</label>
     <div class="viewport powered-by-spotify"><img src="<%= Troopr.spriteUrl %>" class="sprite powered-by-spotify"></img></div>
-    <div class="viewport powered-by-sc"><img src="<%= Troopr.spriteUrl %>" class=" sprite powered-by-sc"></img></div>
-    <button class="search-btn">Search</button>
+    <button class="audio search-btn">Search</button>
     <input type="text" name="search" id="audio-search-bar" placeholder="Imperial March">
   </div>
 
@@ -24,8 +23,8 @@
     <input type="hidden" name="url" id="audio-url">
   </div>
 
-  <div class="search-results">
-    <ul class="search-results-list">
+  <div class="search-results audio">
+    <ul class="search-results-list audio">
 
     </ul>
   </div>
