--- a/app/views/posts/_notes.html.erb
+++ b/app/views/posts/_notes.html.erb
@@ -1,4 +1,4 @@
-<div class="notes-display">
+<div class="notes-display rails">
 	<ul>
 		<% notes.each do |note| %>
 			<li class="note-li"><%= render_note(note) %></li>
