--- a/app/views/posts/_post_bottom_bar.html.erb
+++ b/app/views/posts/_post_bottom_bar.html.erb
@@ -1,11 +1,10 @@
 <div class="post-bottom-bar">
-		<% unless post.get_notes.empty? %>
+		<% unless post.get_notes.length <= 1 %>
 			<a
 				href="<%= post_url(post) %>"
 				class="notes-display">
 				<%= post.get_notes.length %>
-				 note
-				<%= post.get_notes.length > 1 ? 's' : '' %>
+				 note<%= post.get_notes.length > 1 ? 's' : '' %>
 			</a>
 		<% end %>
 
