--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,25 +1,25 @@
-<h1>Sign up for Troopr!</h1>
+<div class="login-window group">
+	<h1>Sign up for Troopr!</h1>
 
-<form action="<%= users_url %>" method="POST">
-	<%= auth_token %>
-	<div class="input-group">
-		<label for="user_email">Email</label>
-		<input type="text" name="user[email]" id="user_email" value="<%= @user.email %>">
-	</div>
-	
-	<div class="input-group">
-		<label for="user_password">Password</label>
-		<input type="password" name="user[password]" id="user_password">
-	</div>
-	<div class="input-group">
-		<label for="user_password_confirmation">Confirm Password</label>
-		<input type="password" name="user[password_confirmation]" id="password_confirmation">
-	</div>
-	<button type="submit">Sign up!</button>
-</form>
+	<form action="<%= users_url %>" method="POST">
+		<%= auth_token %>
+		<div class="input-group">
+			<label for="user_email">Email</label>
+			<input type="text" name="user[email]" id="user_email" value="<%= @user.email %>">
+		</div>
 
-OR
+		<div class="input-group">
+			<label for="user_password">Password</label>
+			<input type="password" name="user[password]" id="user_password">
+		</div>
+		<div class="input-group">
+			<label for="user_password_confirmation">Confirm Password</label>
+			<input type="password" name="user[password_confirmation]" id="password_confirmation">
+		</div>
+		<button class="submit-btn" type="submit">Register!</button>
+	</form>
 
-<a href="/auth/facebook">Sign up with Facebook!</a>
 
-<a href="<%= new_session_url %>">Already have an account? Sign in!</a>
+	<a class="facebook-link" href="/auth/facebook">Sign up with Facebook</a>
+	<a class="submit-btn" href="<%= new_session_url %>">Already signed up? Sign in!</a>
+</div>
