--- a/app/assets/templates/forms/audio.jst.ejs
+++ b/app/assets/templates/forms/audio.jst.ejs
@@ -8,7 +8,7 @@
   </div>
 
   <iframe
-    class="audio-player hidden"
+    class="audio-player hidden search"
     width="500"
     height="80"
     frameborder="0"
@@ -25,11 +25,8 @@
 
   <div class="search-results audio">
     <ul class="search-results-list audio">
-
     </ul>
   </div>
-
-
 
   <input type='hidden' value="audio" name="post_type">
   <button class="submit-btn" type="submit">Submit</button>
