Simplified JST post templates with partials

--- a/app/assets/templates/posts/postheader.jst.ejs
+++ b/app/assets/templates/posts/postheader.jst.ejs
@@ -1,19 +1,15 @@
 <p class="blogname-header">
-
   <a href="javascript:void(0)"
-    class="blogname-link"
-    data-id="<%= post.escape('blog_id') %>">
-  <%= post.escape('blogname') %>
-  </a>
+    class="blogname-link"><%= post.escape('blogname') %></a>
     <% if (post.get('reblog')) { %>
       from
       <a href="javascript:void(0)"
          class="blogname-link"
-         data-id="<%= post.escape('previous_blog_id') %>">
-        <%= post.escape('previous_blogname') %></a>
-    <% }; %></p>
-    <% if (post.get('user_id') === Troopr.currentUserID) { %>
-      <button class="post-delete">
-        <%= String.fromCharCode(215) %>
-      </button>
-    <% } %>
+         data-id="<%= post.escape('previous_blog_id') %>"><%= post.escape('previous_blogname') %></a>
+    <% }; %>
+</p>
+<% if (post.get('user_id') === Troopr.currentUserID) { %>
+  <button class="post-delete">
+    <%= String.fromCharCode(215) %>
+  </button>
+<% } %>
