--- a/app/views/posts/_video.html.erb
+++ b/app/views/posts/_video.html.erb
@@ -3,7 +3,7 @@
   width="500"
   height="304"
   frameborder="0"
-  src="<%= post.url %>"
+  src="<%= "//www.youtube.com/embed/" + post.url %>"
   allowfullscreen>
 </iframe>
 
