Simplified post_show.js, handled iframe rendering in templates.

--- a/app/assets/templates/posts/video.jst.ejs
+++ b/app/assets/templates/posts/video.jst.ejs
@@ -3,6 +3,7 @@
   width="500"
   height="304"
   frameborder="0"
+  src="<%= '//www.youtube.com/embed/' + post.get('url') %>"
   allowfullscreen>
 </iframe>
 <h2 class="post-title"><%= post.escape('title') %></h2>
