--- a/app/assets/templates/posts/index.jst.ejs
+++ b/app/assets/templates/posts/index.jst.ejs
@@ -1,32 +1,4 @@
 <div class="content-space">
-  <div class="dash group">
-    <a href="javascript:void(0)"
-      data-id="<%= Troopr.currentBlogID %>"
-      class="blogname-link">
-      <figure class="blog-avatar">
-        <img src="<%= Troopr.currentBlog.get('filepicker_url') %>" width="64">
-      </figure>
-    </a>
-    <div class="dash-post-panel">
-      <ul class="dash-post-buttons">
-        <a href-"javascript:void(0)" id="text-btn" data-content="text">Text</a>
-        <a href-"javascript:void(0)" id="photo-btn" data-content="photo">Photo</a>
-        <a href-"javascript:void(0)" id="quote-btn" data-content="quote">Quote</a>
-        <a href-"javascript:void(0)" id="link-btn" data-content="link">Link</a>
-        <a href-"javascript:void(0)" id="chat-btn" data-content="chat">Chat</a>
-        <a href-"javascript:void(0)" id="audio-btn" data-content="audio">Audio</a>
-        <a href-"javascript:void(0)" id="video-btn" data-content="video">Video</a>
-      </ul>
-    </div>
-  </div>
-
-  <section class="posts-space">
-    <div class="container">
-        <div class="new-post-form">
-          <div id="input-arrow"></div>
-          <div class="form-space"></div>
-        </div>
-    </div>
-    <div class="post-list"></div>
-  </section>
+  <div class="dash"></div>
+  <div class="post-list"></div>
 </div>
