--- a/app/assets/templates/blogs/index.jst.ejs
+++ b/app/assets/templates/blogs/index.jst.ejs
@@ -2,14 +2,16 @@
   <% Troopr.blogs.each(function(blog) { %>
     <li class="blog-index-li group">
       <div class="left-col">
-        <a href="javascript:void(0)" data-id="<%= blog.escape('id') %>" class="blogname-link">
+        <a href="javascript:void(0)"
+          data-id="<%= blog.escape('id') %>"
+          class="blogname-link">
           <figure class="blog-image-fig blog-index">
             <img src="<%= blog.get('filepicker_url') %>" width="100">
           </figure>
         </a>
         <% if (!blog.get('is_current')) { %>
           <button class="follow-btn" data-blog-id="<%= blog.id %>">
-          <% if(blog.get('is_followed')) { %> Unfollow <% } else { %>Follow<% } %>
+            <% if(blog.get('is_followed')) { %> Unfollow <% } else { %>Follow<% } %>
           </button>
         <% } %>
       </div>
