--- a/app/assets/templates/posts/index.jst.ejs
+++ b/app/assets/templates/posts/index.jst.ejs
@@ -1,4 +1,7 @@
 <div class="content-space">
   <div class="dash"></div>
   <div class="post-list"></div>
+  <div class="loading">
+    Loading...
+  </div>
 </div>
